--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,10 @@
 pillow
 pika
-tflite
+tflite==2.10.0
 requests
 onnx
 onnxruntime
 pywaggle[all]
 git+https://github.com/sagecontinuum/sage-cli.git
 --extra-index-url https://google-coral.github.io/py-repo/ 
-tflite_runtime
+tflite_runtime==2.10.0
